[package]
name = "gol"
version = "0.1.0"
authors = ["Diggory Blake <diggsey@googlemail.com>"]

[dependencies]
gfx = { git = "https://github.com/gfx-rs/gfx" }
getopts = "*"
time = "*"
env_logger = "*"
glutin = "*"
gfx_device_gl = { git = "https://github.com/gfx-rs/gfx" }
gfx_window_glutin = { git = "https://github.com/gfx-rs/gfx" }
rand = "0.3"

[target.x86_64-unknown-linux-gnu.dependencies]
gfx_window_glfw = { git = "https://github.com/gfx-rs/gfx" }
gfx_window_sdl = { git = "https://github.com/gfx-rs/gfx" }

[target.x86_64-pc-windows-gnu.dependencies]
gfx_device_dx11 = { git = "https://github.com/gfx-rs/gfx" }
gfx_window_dxgi = { git = "https://github.com/gfx-rs/gfx" }

[target.x86_64-pc-windows-msvc.dependencies]
gfx_device_dx11 = { git = "https://github.com/gfx-rs/gfx" }
gfx_window_dxgi = { git = "https://github.com/gfx-rs/gfx" }

[dependencies.vecmath]
git = "https://github.com/PistonDevelopers/vecmath"
